--- a/.github/ISSUE_TEMPLATE/cla.yml
+++ b/.github/ISSUE_TEMPLATE/cla.yml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+        Agreement to grant copyright of submissions to this project to its AUTHORS.
   - type: input
     id: name
     attributes:
